--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "12.2.5",
     "next-sitemap": "^3.1.21",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sass": "^1.54.8"
   },
   "devDependencies": {
     "eslint": "8.23.0",
