--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.6.9",
+    "framer-motion": "^7.3.5",
     "graphql": "^16.6.0",
     "next": "12.2.5",
     "next-sitemap": "^3.1.21",
